# mite

./: .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  12hr-blacksheep-gc.py  12hr-blacksheep.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CYTHON3_SEGFAULT_ROOT_CAUSE_ANALYSIS.md  DEV.md  Dockerfile  Dockerfile.perftest  HTTP2_STREAM_ERROR_FIX.md  LICENSE  MANIFEST.in  MEMORY_TUNING.md  OTEL_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_OTEL.md  Using_OTEL.md  _MIGRATION_TO_HATCH.md  api-references.html  basic.py  cat_msgpack.py  cbtest.py  cd.yml  components.html  conf.py  config.html  contributing-guidelines.html  data-visualization.html  debug_mite.py  demo_otel.py  demo_otel_simple.py  deploy_local.py  design-deployment.html  dev-requirements.txt  docker-compose-otel.yml  (+31 more)
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
_images/: graphviz-8c4b894bf07a3507f0a1ad70703cc01deb2af466.png.map
_sources/: api-references.rst.txt  index.rst.txt  installation.rst.txt
acurl/: .gitignore  MANIFEST.in  README.md  fix.py  leak_check.py  pyproject.toml  setup.cfg  setup.py  valgrind-notes.txt
acurl/acurl/: __init__.py  event_loop.py  utils.py  utils.pyi
acurl/cython_debug/: cython_debug_info_acurl  interpreter
acurl/src/: .gitignore  acurl.c  acurl.h  acurl.pxd  acurl.pyx  acurl_wrappers.h  compile-with-warnings.sh  cookie.pxd  cookie.pyx  curl-wrapper.c  curlinterface.pxd  event-loop.c  request.pxd  request.pyx  response.c  response.pxd  response.pyx  session.c  session.pxd  session.pyx  utils.pyx
acurl/src/ae/: ae.c  ae.h  zmalloc.c
acurl/tests/: conftest.py  helpers.py  helpers_ng.py  test_acurl.py  test_acurl_ng.py  test_cookie.py  test_httpbin.py  test_httpbin_ng.py  test_request.py  test_request_ng.py  test_response.py  test_session.py  test_session_ng.py  test_to_curl.py  test_to_curl_ng.py  test_utils.py  test_utils_ng.py
acurl/valgrind/: leak_check.py
acurl_ng/: README.md  setup.cfg  setup.py
acurl_ng/cython_debug/: cython_debug_info_acurl_ng  interpreter
acurl_ng/src/: acurl.c  acurl.pyx  acurl_wrappers.h  cookie.pyx  curlinterface.pxd  response.pyx  session.pyx
acurl_ng/tests/: conftest.py  helpers_ng.py  test_acurl_ng.py  test_cookie_ng.py  test_httpbin_ng.py  test_request_ng.py  test_response.py  test_response_ng.py  test_session.py  test_session_ng.py  test_to_curl_ng.py  test_utils_ng.py
acurl_ng/valgrind/: README.md  leak_check.py
cd-scripts/: cdBuild-1.sh  cdBuild.sh  cdBuildTagRelease.sh  cdManualRelease.sh  cdRelease.py  cdRelease.sh  cdTagRelease.py  cdTagRelease.sh  check_acurl_version.sh  lib.sh  manualRelease.sh  runAcurlTests.sh  runMiteTests.sh  runTests.sh
doc/: usage.rst
docker/: BuildAcurlDockerfile  BuildMiteDockerfile  BuildNanomsgDockerfile  BuildPythonPackagesDockerfile  integration-test
docker/Acurl/: Dockerfile
docker/Mite/: Dockerfile
docker/PythonPackages/: Dockerfile
docs/: OpenTelemetry-Integration.md  OpenTelemetry.md  components.rst  conf.py  config.rst  design-deployment.rst  index.rst  journeys.rst  notes.txt  prometheus.rst  stats.rst  volume-model.rst
docs/source/: conf.py  contributing-guidelines.rst  design-deployment.rst  index.rst
docs_old/: conf.py  design-deployment.rst  notes.txt
grafana/: Dockerfile
local/: Makefile  README.md  demo.py  run_mite.sh
mite/: __init__.py  __main__.py  collector.py  compat.py  config.py  context.py  controller.py  datapools.py  example.py  exceptions.py  har_to_mite.py  logoutput.py  nanomsg.py  recorder.py  runner.py  s3datapools.py  scenario.py  stats.py  telemetry.py  test.py  utils.py  volume_model.py  zmq.py
mite/cli/: cat.py  collector.py  common.py  controller.py  duplicator.py  mem_trace.py  receiver.py  stats.py  test.py
mite/lib/: logging_webhook.py
mite/local/: README.md  demo.py
mite/otel/: __init__.py  acurl_integration.py  config.py  context.py  context_integration.py  instrumentation.py  mite_http_integration.py  stats_integration.py  tracing.py
mite/src/: __init__.py  __main__.py  datapools.py  example.py  exceptions.py  nanomsg.py  stats.py
mite/tests/: test_collector.py  (+9 more)
mite_amqp/: __init__.py
mite_browser/: __init__.py
mite_db_datapool/: README.md  __init__.py  db_to_pool.py  mite_db_example.py  test.db  test.py
mite_dns/: __init__.py
mite_finagle/: README.md  __init__.py  mux.py  stats.py  test.py  thrift.py
mite_http/: __init__.py  aiohttp_trace.py  stats.py
mite_kafka/: __init__.py  kafka_test_scenario.py  kafka_test_stats.py  mite_kafka_example.py  stats.py  test_kafka_wrapper.py
mite_playwright/: README.md  __init__.py  examples.py  mite_playwright_example.py  playwright_runner.py  runner.py  simple_examples.py  simple_runner.py  simple_scenario.py  stats.py  test_adapter.py  utils.py
mite_playwright_new/: README.md  __init__.py  examples.py  mite_playwright_example.py  runner.py  stats.py  test_adapter.py
mite_selenium/: __init__.py  stats.py
mite_ui/: cheap_mitefinder.py  mf_utils.py  mite_ui_guide.md
mite_websocket/: __init__.py
prometheus/: Dockerfile  prometheus_config_docker.yml  prometheus_config_template.yml
test/: __init__.py  legacy.py  test_cli_common.py  test_cli_controller.py  test_collector.py  test_config.py  test_context.py  test_controller.py  test_datapools.py  test_db_to_pool.py  test_har_to_mite.py  test_logging.py  test_mite_amqp.py  test_mite_browser.py  test_mite_http.py  test_mite_kafka.py  test_mite_playwright.py  test_mite_utils.py  test_mite_websockets.py  test_otel.py  test_otel_basic.py  test_playwright_runner.py  test_prometheus_mite.py  test_recorder.py  test_runner.py  test_runner_tracker.py  test_scenario.py  test_selenium.py  test_stats.py  test_telemetry.py  test_volume_model.py  test_webdriver.py  test_work_tracker.py
tests/: legacy.py  test_mite_http.py  test_mite_kafka.py  test_mite_utils.py  test_prometheus_mite.py  test_recorder.py  test_runner.py  test_stats.py  test_volume_model.py  test_webdriver.py
ui_poc/: mf_utils.py  mitefinder_decorator.py  mitefinder_suffix.py
(+69 files in other folders)
