[metadata]
name = mite

[options]
install_requires =
    acurl
    aio_pika
    bs4
    docopt
    flask
    ipdb
    msgpack-python
    nanomsg
    pyzmq
    selenium
    uvloop
    websockets
setup_requires = pytest-runner
tests_require = pytest
packages = find:

[options.entry_points]
console_scripts =
    mite = mite.__main__:main
mite_stats =
    mite = mite.stats:_MITE_STATS
    mite_http = mite_http.stats:STATS
    mite_selenium = mite_selenium.stats:STATS

[options.packages.find]
exclude =
    acurl

[flake8]
ignore =
    # Line too long
    E501
    # Line break before binary operator...black handles this for us
    W503
    # Lambda assignment
    E731
    # Allegedly ambiguous variable names
    E741
exclude = .git,build,dist,.eggs,.tox
max-line-length = 100
