[metadata]
name = mite
description = A Python Performance Testing Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sky-uk/mite/
python_requires = >=3.8
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux

# TODO - Update (or remove) the Selenium version when migrating to v4. The version is explicitly defined
#        as less than 4 as here are backward compatibility issues with Rust from version 4 on
[options]
install_requires =
    acurl
    bs4
    docopt
    flask
    msgpack
    nanomsg
    pyzmq
    selenium<4
    uvloop
    websockets
setup_requires = pytest-runner
packages = find:

[options.extras_require]
amqp =
    aio_pika
finagle =
    thrift
selenium =
    selenium
selenium_wire = selenium-wire>=4.3.0

[options.entry_points]
console_scripts =
    mite = mite.__main__:main
mite_stats =
    mite = mite.stats:_MITE_STATS
    mite_finagle = mite_finagle.stats:STATS
    mite_http = mite_http.stats:STATS
    mite_selenium = mite_selenium.stats:STATS

[options.packages.find]
exclude =
    acurl

[flake8]
ignore =
    # Line too long
    E501
    # Line break before binary operator...black handles this for us
    W503
    # Lambda assignment
    E731
    # Allegedly ambiguous variable names
    E741
exclude = .git,build,dist,.eggs,.tox
max-line-length = 88
