[metadata]
name = acurl
description = An async Curl library.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
author = Tony Simpson
author_email = agjasimpson@gmail.com
maintainer = Sky Identity NFT team
maintainer_email = aaron.ecay@sky.uk
license = MIT
url = https://github.com/sky-uk/acurl
version = 0.1

[options]
packages = acurl
setup_requires = pytest-runner
install_requires = ujson>=4.1.0
tests_require = pytest

[aliases]
test=pytest

[flake8]
ignore =
    # Line too long
    E501
    # Line break before binary operator...black handles this for us
    W503
    # Lambda assignment
    E731
exclude = .git,build,dist,.eggs,.tox
max-line-length = 100
