[metadata]
name = acurl
description = An async Curl library.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
author = Aaron Ecay
author_email = aaron.ecay@sky.uk
maintainer = Sky Identity NFT team
maintainer_email = matthew.ellis@sky.uk
license = MIT
url = https://github.com/sky-uk/mite/tree/master/acurl
version = 1.0.2

[options]
install_requires =
    ujson>=4.1.0
    uvloop
tests_require = pytest

[aliases]
test=pytest

[flake8]
ignore =
    # Line too long
    E501
    # Line break before binary operator...black handles this for us
    W503
    # Lambda assignment
    E731
exclude = .git,build,dist,.eggs,.tox
max-line-length = 100
