[metadata]
name = acurl_ng
description = An async Curl library.
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
author = Tony Simpson
author_email = agjasimpson@gmail.com
maintainer = Sky Identity NFT team
maintainer_email = aaron.ecay@sky.uk
license = MIT
url = https://github.com/sky-uk/acurl

[options]
# packages = acurl
install_requires =
    ujson
    uvloop
tests_require = pytest

[aliases]
test=pytest

[flake8]
ignore =
    # Line too long
    E501
    # Line break before binary operator...black handles this for us
    W503
    # Lambda assignment
    E731
exclude = .git,build,dist,.eggs,.tox
max-line-length = 100
